--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Authorization Form</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
     </style>
@@ -19,21 +19,27 @@
             </div>
             <h1 class="title">Welcome friend!</h1>
             <div class="subtitle">
-              Dont' you have a profile? <a href="#">Register</a>
+              Don't you have a profile? <a href="#">Register</a>
             </div>
             <div class="social-contact">
-              <div class="social-icon">
-                <img src="./assets/social/icon-google.png" alt="" />
-              </div>
-              <div class="social-icon">
-                <img src="./assets/social/icons-github.png" alt="" />
-              </div>
-              <div class="social-icon">
-                <img src="./assets/social/icons-facebook.png" alt="" />
-              </div>
-              <div class="social-icon">
-                <img src="./assets/social/icons-vk.png" alt="" />
-              </div>
+              <a class="social-icon">
+                <img src="./assets/social/icon-google.svg" alt="icon-google" />
+              </a>
+              <a class="social-icon">
+                <img
+                  src="./assets/social/icons-github.svg"
+                  alt="icons-github"
+                />
+              </a>
+              <a class="social-icon">
+                <img
+                  src="./assets/social/icons-facebook.svg"
+                  alt="icons-facebook"
+                />
+              </a>
+              <a class="social-icon">
+                <img src="./assets/social/icons-vk.svg" alt="icons-vk" />
+              </a>
             </div>
 
             <div class="divider">
@@ -41,7 +47,7 @@
             </div>
 
             <div class="input-wrapper">
-              <span>Email</span>
+              <label>Email</label>
               <input
                 class="input"
                 type="text"
@@ -50,19 +56,27 @@
             </div>
 
             <div class="input-wrapper password-input">
-              <span>Password</span>
+              <label>Password</label>
               <input
                 class="input"
                 type="password"
                 id="passwordInput"
                 placeholder="Enter your password"
               />
-              <div class="password-eye-btn" onclick="toggleHiddenPassword()">
-                <img class="password-eye-icon" src="./assets/eye.png" alt="" />
-              </div>
+              <button
+                type="button"
+                class="password-eye-btn"
+                onclick="toggleHiddenPassword()"
+              >
+                <img
+                  class="password-eye-icon"
+                  src="./assets/eye.svg"
+                  alt="eye-btn"
+                />
+              </button>
             </div>
 
-            <div class="sign-in__btn-wrapper">
+            <div class="sign-in">
               <button class="sign-in__btn">Sign In</button>
             </div>
             <div class="forgot-password">
@@ -71,7 +85,7 @@
           </div>
         </form>
         <div class="image-block">
-          <img src="./assets/Rectangle.png" alt="" />
+          <img src="./assets/smile-background.png" alt="smile-background" />
         </div>
       </div>
     </section>
